lang/macro/tests/ui/fail/17-invalid-return-type.stderr
error[E0277]: the trait bound `I: liquid_lang::You_Should_Use_An_Valid_Return_Type` is not satisfied
  --> $DIR/17-invalid-return-type.rs:17:28
   |
17 |         pub fn noop(&self) -> I {}
   |                            ^^^^ the trait `liquid_lang::You_Should_Use_An_Valid_Return_Type` is not implemented for `I`
